<resources>
    <string name="app_name">Exam Android</string>
    <string name="authentification">Authentification</string>
    <string name="login">Login</string>
    <string name="password">Mot de passe</string>
    <string name="hintLogin">Saisissez votre Email</string>
    <string name="bLogin">s\'authentifier</string>
    <string name="bSignUp">Inscription</string>
    <string name="tvSignUp">Inscription</string>
    <string name="tvName2">Nom</string>
    <string name="tvEmail2">Email</string>
    <string name="tvPassword2">Password</string>
    <string name="bValider2">Valider</string>
    <string name="bAjouter">Ajouter</string>
    <string name="bModifier">Modifier</string>
    <string name="bSupprimer">Supprimer</string>

    <string name="liste_utilisateurs">Liste Utilisateurs</string>
    <string name="liste_clients">Liste des Clients</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Calculatrice">Calculatrice</string>
    <string name="open_nav">Open nav bar</string>
    <string name="close_nav">Close nav bar</string>
    <string name="add_Client">Ajouter un client</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--Related to calculatrice -->

    <string name="empty" />
    <string name="Clear">C</string>
    <string name="del">del</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="percent">%</string>
    <string name="negation">+\/-</string>
    <string name="one">1</string>
    <string name="slash">/</string>
    <string name="multiplication">x</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>

    <!--Related to calculatrice -->
    <string name="temperature_title">Température</string>
    <string name="celsius">Celsius</string>
    <string name="farenheit">Farenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="convert">Convert</string>
    <string name="annuler">Annuler</string>
    <string name="password_hint">Saisissez votre mot de passe</string>


</resources>